<package>
    <name>asr_robot</name>
    <version>1.1.0</version>
    <description>
	Packages to control and visualize our robot. Includes packages you can use for drives your robot. 
    </description>
    <author>Felix Marek</author>
    <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
    <url type="website">http://wiki.ros.org/asr_robot</url>
    <license>BSD</license>  

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>asr_mild_base_driving</exec_depend>
    <exec_depend>asr_mild_base_laserscanner</exec_depend>
    <exec_depend>asr_mild_base_launch_files</exec_depend>
    <exec_depend>asr_mild_base_fake_driving</exec_depend>
    <exec_depend>asr_ftc_local_planner</exec_depend>
    <exec_depend>asr_navfn</exec_depend>
    <exec_depend>asr_mild_navigation</exec_depend>
    <exec_depend>asr_mild_calibration_tool</exec_depend>
    <exec_depend>asr_gazebo_models</exec_depend>
    <exec_depend>asr_mild_kinematic_chain</exec_depend>
    <exec_depend>asr_robot_model_services</exec_depend>



    <export>
        <metapackage/>
    </export>
</package>
